# GPT-Nexus

./: .gitignore  README.md  nexus.db  pyproject.toml
gpt_nexus/: cli.py  main.py  streamlit_main.py  streamlit_ui.py
gpt_nexus/api/: main.py
gpt_nexus/chat_base/: chat_system.py
gpt_nexus/chat_base/actions/: test_actions.py
gpt_nexus/interface/: chat.py  login.py
gpt_nexus/nexus_base/: action_manager.py  agent_manager.py  assistants_manager.py  chat_models.py  chat_system.py  knowledge_manager.py  memory_manager.py  nexus.py  profile_manager.py  prompt_template_manager.py  retrieval_manager.py  thought_engine.py  thought_template_manager.py  tracking_manager.py
gpt_nexus/streamlit_ui/: actions.py  agent.py  agent_chat.py  agent_panel.py  assistants_chat.py  assistants_panel.py  cache.py  embeddings.py  knowledge.py  login.py  memory.py  profile.py  prompts.py  thought_templates.py  usage.py  workflow.py
gpt_nexus/ui/: actions.py  agent.py  agent_chat.py  agent_panel.py  assistants_chat.py  assistants_panel.py  cache.py  chat.py  embeddings.py  knowledge.py  login.py  memory.py  options.py  profile.py  prompts.py  thought_templates.py  usage.py  workflow.py
nexus/: cli.py  streamlit_main.py
nexus-chroma-db/: chroma.sqlite3
nexus/nexus_base/: nexus_models.py
nexus/streamlit_ui/: agent_chat.py  assistants_chat.py  login.py
nexus_chroma_db/: chroma.sqlite3
tests/: test_assistant_manager.py  test_nexus_system.py  test_prompt_template_manager.py  test_thought_engine.py  test_thought_template_manager.py  test_tracking_manager.py
(+18 files in other folders)
