[tool.poetry]
name = "gpt-nexus"
version = "0.1.0"
description = ""
authors = ["Micheal Lanham <cxbxmxcx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.17.1"
streamlit = "^1.32.0"
openai = "^1.13.3"
streamlit-js-eval = "^0.1.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nexus = "gpt_nexus.cli:main"


